--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 	<title>Document</title>
 </head>
 <body class="background-1">
-	<div onmousedown="change()"></div>
+<!--	<div onmousedown="change()"></div>-->
 
 </body>
 </html>
